# rsim

./: .gitignore  CLAUDE.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_SUMMARY.md  COMPONENT_CONNECTION_REFACTOR.md  COMPONENT_REFACTOR_PLAN.md  CSP_MULTITHREADING_ANALYSIS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  MASSIVE_SCALE_BENCHMARK_REPORT.md  MCDONALD_SIMULATION_DESIGN.md  MEMORY_BASED_REFACTOR_GUIDE.md  PARALLEL_SIMULATION_DESIGN.md  README.md  REFACTOR_GUIDE.md  burger_design.md  burger_event_design.md  burger_implementation_plan.md  burger_production_strategies.md  component_pipeline_test.md  component_refactor_design.md  component_refactor_implementation.md  concurrency_doc.md  core_module_method_analysis.md  parallel_simulation_plan.md  rsim_core_api.md  simulator_architecture.md  simulator_architecture_diagrams.md
.claude/: settings.local.json
archive/: CODE_REVIEW_FINDINGS.md  CORE_ARCHITECTURE_REVIEW.md  MCDONALD_SIMULATION_DESIGN.md  simulator_architecture.md  simulator_architecture_diagrams.md
docs/: CODE_REVIEW_SUMMARY.md  concurrency_doc.md  rsim_core_api.md
examples/: complete_mcdonald_simulation.rs  component_pipeline_test.rs  macro_examples.rs  simple_imperative.rs
examples/burger_production/: Cargo.toml  README.md  config.rs  lib.rs  main.rs  mod.rs
examples/mc_simulation/: check_order.rs  complete_test.rs  debug_execution_order.rs  debug_test.rs  delay_config_demo.rs  delay_verification_test.rs  large_scale_benchmark.rs  main.rs  massive_scale_benchmark.rs  simple_parallel_test.rs  simple_test.rs  simulation_builder.rs  super_massive_test.rs  timing_benchmark.rs  ultra_massive_test.rs
src/: lib.rs  macro_tests.rs  main.rs  test_phase3.rs  test_phase4.rs  test_phase5.rs
src/analysis/: component_partition.rs  dependency_graph.rs  dependency_graph_tests.rs  graph_partitioner.rs  greedy_partitioner.rs  mod.rs  profiled_simulation_run.rs  profiling_collector.rs
src/builders/: mod.rs
src/components/: mod.rs
src/core/: component.rs  component_manager.rs  component_module.rs  component_registry.rs  connection_manager.rs  connection_validator.rs  cycle_engine.rs  dependency_graph.rs  event.rs  event_manager.rs  event_scheduler.rs  execution_order.rs  (+9 more)
tests/: core_api_tests.rs
(+108 files in other folders)
