[package]
name = "rsim"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "burger_simulation"
path = "examples/burger_production/main.rs"
