[package]
name = "rsim"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"

[[bin]]
name = "mcdonald_main"
path = "examples/mc_simulation/main.rs"

[[bin]]
name = "timing_benchmark"
path = "examples/mc_simulation/timing_benchmark.rs"

[[bin]]
name = "large_scale_benchmark"
path = "examples/mc_simulation/large_scale_benchmark.rs"

[[bin]]
name = "massive_scale_benchmark"
path = "examples/mc_simulation/massive_scale_benchmark.rs"

